# st1-emporwerdata

./: Cadastro.py  clientes.csv  pyproject.toml
