[tool.poetry]
name = "projeto-streamlit-pratico"
version = "0.1.0"
description = ""
authors = ["Douglas França <douglas_nts@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
